--- a/template/.github/workflows/bookml.yaml
+++ b/template/.github/workflows/bookml.yaml
@@ -3,6 +3,8 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-24.04
+    permissions:
+      contents: write
     steps:
       - name: Check out LaTeX files
         uses: actions/checkout@v4
