--- a/template/.github/workflows/bookml.yaml
+++ b/template/.github/workflows/bookml.yaml
@@ -10,11 +10,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Compile with BookML
         id: bookml
-        # you may replace bookml with bookml-basic, bookml-small, bookml-medium to download fewer packages
+        # replace /bookml: with /bookml-basic:, /bookml-small:, /bookml-medium: to download fewer packages
         uses: docker://ghcr.io/vlmantova/bookml:latest
         with:
-          args: -k all
-        timeout-minutes: 10 # increase if required
+          entrypoint: /bin/sh
+          args: -c "/run-bookml -k all | tee .git/bookml-report"
+        timeout-minutes: 6 # increase if required
       - name: Pack auxiliary folder
         uses: docker://ghcr.io/vlmantova/bookml-basic:latest
         with:
@@ -23,10 +24,22 @@ jobs:
         if: ${{ always() }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          notes: |-
-            ${{ steps.bookml.outcome == 'cancelled' && '**The build was cancelled. Some outputs may be missing.** ' || ( steps.bookml.outcome == 'failure' && '**Parts of the build have failed. Consult the AUX file for more information.** ' || '' ) }}
-            Commit message: ${{ github.event.head_commit.message }}
+          notes_1: |-
+            ${{ steps.bookml.outcome == 'cancelled' && '**The build was cancelled. Some outputs may be missing.** ' || ( steps.bookml.outcome == 'failure' && '**Parts of the build have failed. Consult the AUX file for more information.** ' || '**All outputs have been built.**' ) }}
+
+            *Commit message:* ${{ github.event.head_commit.message }}
+
+            ### Summarised output
+            <pre><code>
+          notes_2: |-
+            </code></pre>
+
+            ### Full output
+            <details><summary><b>Click to show full output</b></summary>
+            <pre><code>
+          notes_3: |-
+            </code></pre></details>
           title: "${{ steps.bookml.outcome == 'cancelled' && 'cancelled' || ( steps.bookml.outcome == 'failure' && 'failed' || 'successful' ) }} build: ${{ github.event.head_commit.message }}"
           ref: ${{ github.ref_name }}
           tag: build-${{ github.run_number }}
-        run: gh release create "$tag" --target="$ref" --repo="$GITHUB_REPOSITORY" --title="$title" --notes="$notes" *.zip
+        run: gh release create "$tag" --target="$ref" --repo="$GITHUB_REPOSITORY" --title="$title" --notes="$notes_1$(head -n 5 .git/bookml-report)"$'\n'$'\n'...$'\n'$'\n'"$(tail -n 5 .git/bookml-report)$notes_2$(cat .git/bookml-report)$notes_3" *.zip
