--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,8 +59,6 @@ jobs:
         with:
           name: release
           path: docker-ctx
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Set up containerd snapshotter
@@ -74,7 +72,7 @@ jobs:
         run: make BOOKML_VERSION="$version" docker-push-${{ matrix.scheme }}-amd64
 
   docker-arm64:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     name: Create docker images (arm64)
     needs: build
     strategy:
@@ -95,8 +93,6 @@ jobs:
         with:
           name: release
           path: docker-ctx
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Set up containerd snapshotter
