--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,38 +1,37 @@
-name: Publish GitHub Pages
+name: Publish to GitHub Pages
 on: push
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Extract BookML
-        uses: docker://ghcr.io/vlmantova/bookml-full:latest-amd64
+      - name: Compile with BookML
+        id: bookml
+        uses: vlmantova/bookml-action@v1
         with:
-          args: update
-      - name: Compile
-        uses: docker://ghcr.io/vlmantova/bookml-full:latest-amd64
-      - name: Setup pages
-        uses: actions/configure-pages@v5
-      - name: upload outputs
-        uses: actions/upload-artifact@v4
+          release: false
+          upload-aux-directory: false
+          replace-bookml: true
+      - name: Create tarball
+        run: |
+          tar -cvf "$RUNNER_TEMP"/docs.tar.gz -C "$RUNNER_TEMP"/auxdir/html/docs --exclude=./LaTeXML.cache .
+      - name: Upload pages artifact
+        uses: actions/upload-artifact@v6
         with:
           name: github-pages
-          path: '*.tar'
-          retention-days: 1
+          path: ${{ runner.temp }}/docs.tar.gz
           if-no-files-found: error
-          overwrite: true
+          retention-days: 1
+          compression-level: 0
 
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     permissions:
-      contents: read
       pages: write
       id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page-url }}
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
