--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -128,17 +128,10 @@ jobs:
         run: |
           make BOOKML_VERSION="$version" docker-manifest-basic docker-manifest-small docker-manifest-medium docker-manifest-mediumextra docker-manifest-full docker-manifest
 
-  delete-package-versions:
+  cleanup:
     runs-on: ubuntu-latest
-    name: Delete Package Versions
-    needs: manifest
-    permissions:
-      packages: write
+    name: Delete unused packages
     steps:
-      - name: Container cleanup
-        uses: jenskeiner/ghcr-container-repository-cleanup-action@v1
+      - uses: dataaxiom/ghcr-cleanup-action@v1
         with:
-          exclude-tags: .+
-          keep-n-untagged: 1
-          token: ${{ secrets.GITHUB_TOKEN }}
           dry-run: true
