--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -131,7 +131,6 @@ jobs:
   cleanup:
     runs-on: ubuntu-latest
     name: Delete unused packages
+    needs: manifest
     steps:
       - uses: dataaxiom/ghcr-cleanup-action@v1
-        with:
-          dry-run: true
